# LottoAnalysisThai

./: Cargo.toml  Dockerfile  README.md  main.rs  render.yaml
src/: main.rs
static/: app.js
templates/: index.html
