[package]
name = "lotto_analysis_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.3"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
reqwest = "0.11"
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.17"
tokio = { version = "1", features = ["full"] }